<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#1F243C"
    android:layout_height="match_parent"
    tools:context=".ProfileAccess.UpdateMyProfile">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:textSize="12dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"/>

             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:id="@+id/text_update_profile"
                  android:textSize="43dp"
                 android:layout_marginTop="59dp"
                android:layout_marginLeft="30dp"
                 android:fontFamily="@font/montserrat"
                android:text="@string/update_profile"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:layout_below="@+id/text_update_profile"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="43dp"
            android:id="@+id/text_personal_info"
            android:textSize="23dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/text_personal_info"
            android:layout_marginTop="45dp"
            app:boxBackgroundMode="outline"
            android:paddingLeft="10dp"
            android:hint="@string/name"
            android:id="@+id/name_update"
            app:boxStrokeColor="@color/ap_gray"
            android:textColorHint="@color/ap_gray"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/name_modified"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:inputType="text"
                android:layout_height="match_parent" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/name_update"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            android:paddingLeft="10dp"
            android:hint="@string/date_of_birth"
            android:id="@+id/date_of_birth_update"
            app:boxStrokeColor="@color/ap_gray"
            android:textColorHint="@color/ap_gray"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/date_of_birth_modified"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:drawableRight="@android:drawable/ic_menu_agenda"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:onClick="PickerOfDate"
            android:layout_height="wrap_content"
            android:background="@color/ap_transparent"
            android:layout_alignTop="@+id/date_of_birth_update"
            android:layout_alignParentRight="true"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/date_of_birth_update"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            android:paddingLeft="10dp"
            android:hint="@string/weight"
            android:id="@+id/weight_update"
            app:boxStrokeColor="@color/ap_gray"
            android:textColorHint="@color/ap_gray"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/weight_modified"
                android:inputType="number"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:layout_height="match_parent" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#AEAEAE"
            android:layout_margin="30dp"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            android:id="@+id/text_gender_update"
            android:layout_below="@id/weight_update"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/text_gender_update"
            android:layout_below="@id/weight_update"
            android:layout_marginTop="20dp"
            android:id="@+id/bt_male_modified"
            android:background="#30354A"
            android:fontFamily="@font/montserrat"
            android:layout_marginRight="2dp"
            android:onClick="Male_Gender_updated"
            android:textColor="#AEAEAE"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:text="@string/male"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#AEAEAE"
            android:fontFamily="@font/montserrat"
            android:layout_toRightOf="@+id/bt_male_modified"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/weight_update"
            android:layout_marginTop="20dp"
            android:onClick="Female_Gender_updated"
            android:textAllCaps="false"
            android:background="#30354A"
            android:id="@+id/bt_female_modified"
            android:textSize="14sp"
            android:text="@string/female"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change your profile Picture"
            android:layout_below="@id/text_gender_update"
            android:id="@+id/change_profile_pic"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_profile_pic"
            android:layout_margin="25dp"
            android:id="@+id/global_container">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/global_container_1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:id="@+id/avatar_mod_1"
                    android:layout_weight="1"
                    android:src="@drawable/icon_profile_one"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:id="@+id/avatar_mod_2"
                    android:src="@drawable/icon_profile_two"/>
                <ImageView
                    android:layout_width="0dp"
                    android:id="@+id/avatar_mod_3"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_profile_three"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:id="@+id/global_container_2">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:id="@+id/avatar_mod_4"
                    android:src="@drawable/icon_profile_four"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:id="@+id/avatar_mod_5"
                    android:layout_weight="1"
                    android:src="@drawable/icon_profile_five"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:id="@+id/avatar_mod_6"
                    android:layout_weight="1"
                    android:src="@drawable/icon_profile_six"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/global_container_3">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:id="@+id/avatar_take_photo_mod"
                    android:src="@drawable/image_preview"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/take_selfie"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:fontFamily="@font/montserrat"
                    android:layout_gravity="center"/>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update"
            android:textColor="@color/white"
            android:background="@color/abyedh"
            android:fontFamily="@font/montserrat"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:padding="5dp"
            android:id="@+id/update_btn"
            android:layout_alignParentRight="true"
            android:layout_margin="25dp"
            android:layout_below="@id/global_container"/>




















    </RelativeLayout>
</ScrollView>